# masking-tool-v2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: user-guide.md
packaging/: MaskingTool.spec  README.md  build_exe.ps1  distribution-checklist.md
specs/001-file-masking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-exe-packaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-user-operation-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-docx-pptx-run-replacement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-unicode-normalization-matching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-replacement-text-overlap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-pdf-textbox-fit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/masking_tool/: __init__.py  __main__.py  app.py  docgen.py  models.py  office_replacer.py  packaging.py  pdf_replacer.py  replacement_table.py  report.py  scanner.py  text_replacer.py  ui.py
tests/contract/: test_office_split_run_contract.py  (+9 more)
(+60 files in other folders)
