[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "masking-tool-v2"
version = "0.1.0"
description = "Local file masking tool driven by replacement proposals."
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "PyMuPDF>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=8"]
build = ["pyinstaller>=6.0"]

[project.scripts]
masking-tool = "masking_tool.__main__:main"

[tool.masking-tool]
app-title = "Masking Tool"
executable-name = "MaskingTool.exe"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
